--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -11,3 +11,8 @@ matplotlib
 numpydoc
 sphinx-copybutton
 sphinx_rtd_theme
+suitcase-jsonl >=0.1.0b2
+suitcase-mongo >=0.1.0
+suitcase-msgpack >=0.2.2
+bluesky
+ophyd
